--- a/src/public/index.html
+++ b/src/public/index.html
@@ -35,8 +35,8 @@
             var config = {
                 container_id: "viz",
                 server_url: "bolt://localhost:7687",
-                server_user: "megashi",
-                server_password: "pedro123",
+                server_user: "jmtordoya",
+                server_password: "jmtordoya",
                 labels: {
                     "document": {
                         "caption": "autoConst",
