--- a/src/public/prueba.html
+++ b/src/public/prueba.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="prueba.css">
 </head>
 <body>
-    <div id="container">
+    <form action="" onsubmit="return false;">
+        <input type="text" id="text" placeholder="">
+        <input type="submit" id="btnBuscar" value="Buscar">
+    </form>
+    <div id="container" class="container">
         <!-- <div class="documento">
             <h2>Titulo</h2>
             <p>Parrafo</p>
