--- a/src/public/prueba.html
+++ b/src/public/prueba.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    <div id="overlay" class="overlay"></div>
+    <div id="modaltext" class="modalText"><p id="parrafo"></p></div>
     <div class="container">
         <form action="" onsubmit="return false;">
             <div class="containerlabel">
@@ -60,26 +62,6 @@
     </button>-->
 
     <!-- Modal -->
-    <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    
 
     <div id="container" class="container docs">
 
